[gd_scene load_steps=11 format=3 uid="uid://bgcsi0kohhi4b"]

[ext_resource type="Script" path="res://actors/spore.gd" id="1_rl77e"]
[ext_resource type="Texture2D" uid="uid://borkg2e3ipgmu" path="res://assets/dandelion.png" id="2_oea22"]

[sub_resource type="AtlasTexture" id="AtlasTexture_flbj8"]
atlas = ExtResource("2_oea22")
region = Rect2(0, 0, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgw0b"]
atlas = ExtResource("2_oea22")
region = Rect2(62, 0, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbfrk"]
atlas = ExtResource("2_oea22")
region = Rect2(124, 0, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0nyo"]
atlas = ExtResource("2_oea22")
region = Rect2(186, 0, 62, 62)

[sub_resource type="SpriteFrames" id="SpriteFrames_ltykn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_flbj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgw0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbfrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0nyo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_nijr3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SporeDisplay:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SporeDisplay:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraMarker2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_olisf"]
resource_name = "fly_away"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SporeDisplay:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(195, -226), Vector2(524, -294), Vector2(668, -434), Vector2(859, -459), Vector2(983, -535)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(140, -195), Vector2(309, -214), Vector2(363, -285)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SporeDisplay:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(4, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraMarker2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(140, -200), Vector2(300, -215), Vector2(363, -285)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4gx4f"]
_data = {
"RESET": SubResource("Animation_nijr3"),
"fly_away": SubResource("Animation_olisf")
}

[node name="Spore" type="Node2D"]
script = ExtResource("1_rl77e")

[node name="SporeDisplay" type="Node2D" parent="."]
scale = Vector2(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="SporeDisplay"]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="SporeDisplay"]
visible = false
color = Color(0.737255, 0.419608, 0.498039, 1)
polygon = PackedVector2Array(-7, -14, -16, -10, -5, -10, -8, -5, -1, -8, 3, 8, -3, 18, 3, 17, 7, 8, 3, -10, 12, -7, 4, -15, 18, -16, 1, -20, 9, -34, -6, -21, -13, -27, -8, -19, -13, -17)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SporeDisplay"]
sprite_frames = SubResource("SpriteFrames_ltykn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4gx4f")
}

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="CameraMarker2D" type="Marker2D" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
